Update SDKs until Vertx HttpClient